# V59-tier3-team-33

./: README.md  SETUP.md
backend/: .env.example  pyproject.toml  schema.yml
backend/api/: urls.py
backend/apps/accounts/: adapters.py  apps.py  manager.py  models.py  serializers.py  services.py  signals.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
backend/apps/core/: renderer.py  views.py
backend/apps/itineraries/: admin.py  constants.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
backend/apps/itineraries/migrations/: 0001_initial.py  0002_alter_event_duration_event_unique_event_per_trip_day.py  0002_alter_lodging_location_text.py  0002_tripsavedplace_saved_by_alter_event_duration_and_more.py  0002_usertrip_unique_user_trip_per_user.py  0003_remove_event_location_text_remove_event_name.py  0004_merge_20260128_1539.py  0004_remove_tripday_name.py  0005_remove_lodging_unique_lodging_per_trip_and_more.py  0006_remove_event_unique_event_per_trip_day_and_more.py
backend/apps/itineraries/services/: route_optimizer.py
backend/apps/places/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
backend/apps/places/migrations/: 0001_initial.py  0002_remove_place_description_alter_place_latitude_and_more.py
backend/config/: settings.py  urls.py
backend/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_signup_message.html  email_confirmation_subject.txt  (+3 more)
backend/templates/email/: welcome_email.html  welcome_email.txt
(+125 files in other folders)
