[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-rest-auth>=5.0.2",
    "django>=6.0.1",
    "django-allauth>=65.14.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.13",
]
